--- a/scrimba/P01/style.css
+++ b/scrimba/P01/style.css
@@ -1,7 +1,19 @@
+body {
+    @import url('https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&display=swap');
+    font-family: "Spline", "Arial", sans-serif;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0 8px 40px -10px #000;
+    padding: 10px 20px;
+    background-color: #077;
+    color: #fff;
 }
 
 .nav-items {
@@ -12,4 +24,17 @@
 
 .nav-logo {
     width: 60px;
+}
+
+.main-content {
+    padding: 20px;
+}
+
+.footer {
+    background-color: #777;
+    padding: 20px;
+    color: #fff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
